--- a/D2.1/ref/dkn_2012-12-23_report-wp2-t2-1-1_12_jw.bib
+++ b/D2.1/ref/dkn_2012-12-23_report-wp2-t2-1-1_12_jw.bib
@@ -1,4 +1,4 @@
-﻿@misc{Cimatti.2008c,
+@misc{Cimatti.2008c,
  author = {Cimatti, Alessandro and Roveri, Marco and Susi, Angelo},
  year = {2008},
  title = {ETCS requirements specification and validation: the methodology},
@@ -14,7 +14,7 @@
  urldate = {24.08.2012},
  volume = {35.240.60},
  number = {50128},
- author = {EN50128:}
+ author = {EN50128}
 }
 
 
@@ -47,7 +47,6 @@
  author = {Schnieder, Lars},
  year = {2010},
  title = {Formalisierte Terminologien technischer Systeme und ihrer Zuverl{\"a}ssigkeit},
- url = {http://www.digibib.tu-bs.de/?docid=00033170},
  address = {Braunschweig},
  school = {{Technische Universit{\"a}t Braunschweig}}
 }
@@ -60,7 +59,7 @@
  volume = {25.040.40},
  number = {3681},
  publisher = {Beuth Verlag},
- author = {{VDI/VDE 3681}}
+ author = {VDI/VDE 3681}
 }
 
 
