Intermediate as draft mark

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -3,13 +3,24 @@
 %\documentclass[nocc]{template/openetcs_article} 
 \usepackage{rotating,url,color}
 \graphicspath{{./template/}{.}{./images/}}
+
+\usepackage{draftwatermark}
+\SetWatermarkLightness{0.85}
+\SetWatermarkAngle{25}
+\SetWatermarkScale{2}
+\SetWatermarkFontSize{2cm}
+\SetWatermarkText{Intermediate}
+
+
 \begin{document}
 \frontmatter
 \project{openETCS}
 
+
 %Please do not change anything above this line
 %============================
 % The document metadata is defined below
+
 
 %assign a report number here
 \reportnum{OETCS/WP2/D2.4~--~00.03}
@@ -119,9 +130,10 @@ the document \\
 
 \end{tabular}
 
+
+
 % The actual document starts below this line
 %=============================
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%              My macros (=> Sylvain Baro)               %%%
