--- a/D2.5/D2.5 Subset of Requirements for Benchmarking of Tools.tex
+++ b/D2.5/D2.5 Subset of Requirements for Benchmarking of Tools.tex
@@ -47,7 +47,7 @@
 \affiliation{OpenETCS}
 
 % define the coverart
-\coverart[width=350pt]{chart}
+\coverart[width=350pt]{openETCS_EUPL}
 
 %define the type of report
 \reporttype{Requirements}
