Draft version of SysML guidelines

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -4,12 +4,12 @@
 \usepackage{rotating,url,color}
 \graphicspath{{./template/}{.}{./images/}}
 
-\usepackage{draftwatermark}
-\SetWatermarkLightness{0.85}
-\SetWatermarkAngle{25}
-\SetWatermarkScale{2}
-\SetWatermarkFontSize{2cm}
-\SetWatermarkText{Intermediate}
+%\usepackage{draftwatermark}
+%\SetWatermarkLightness{0.85}
+%\SetWatermarkAngle{25}
+%\SetWatermarkScale{2}
+%\SetWatermarkFontSize{2cm}
+%\SetWatermarkText{Intermediate}
 
 
 \begin{document}
@@ -32,8 +32,7 @@
 \title{OpenETCS methods}
 
 %set a subtitle here
-\subtitle{ Definition of the methods used to perform the formal description \\
-Intermediate version}
+\subtitle{ Definition of the methods used to perform the formal description}
 
 %set the date of the report here
 \date{June 2013}
@@ -183,7 +182,14 @@ the document \\
 
 \input{openETCS_meth.tex}
 
+\input{sysml.tex}
 
+
+\section{Approaches for low level design}
+
+\begin{comment}
+to  complete later: SCADE ? OS approaches ?
+\end{comment}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
