--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -6,3 +6,13 @@
 This section will be written for the final version of the document, after the approach and tools tio  use during the project will be selected.
 \end{comment}
 
+According to  the WP7 decision meeting, the 4th of July, in Paris, SysML, supported by the Papyrus tool,  has been chosen to  cover the highest level of modelling.
+
+The choice of the approaches for the lower levels of modelling is not yet fixed.
+
+This section gives a proposal on how to use the selected approaches to produce from the input documents (ERA documentation and complements)  to a SIL4 code.
+
+\subsection{Sum up of chosen approaches}
+\begin{comment}
+list of chosen approaches, and for which activities they are used
+\end{comment}
